--- a/index.html
+++ b/index.html
@@ -3,15 +3,29 @@
 <head>
 	<title>Visual Emotion</title>
 	<script src="https://use.fontawesome.com/3ea3387309.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
 <body>
 	
-	<h1>Visual Emotion</h1>
-
+	<div class="container landing-page">
+		<div class="landling-page">
+			<h1 class="text-center">Welcome to Visual Emotion</h1>
+			<div class="container text-center btn-box">
+				<button class="btn btn-primary">Begin Your Journey</button>
+			</div>
+		</div>
+	</div>
 	
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script type="text/javascript" src="js/functions.js"></script>
+
+
+		
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/functions.js"></script>
 </body>
 </html>
