--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 	
 	<div class="container landing-page">
 		<div class="landling-page">
-			<h1 class="text-center">Welcome to Visual Emotion</h1>
+			<div class="logo text-center">
+				<!-- <img src="img/logo-1.png" alt="visual emotion logo"> -->
+				<img src="img/logo-2.png" alt="visual emotion logo">
+
+			</div>
+			<h1 class="text-center"><span>Visual</span> Emotion</h1>
 			<div class="container text-center btn-box">
-				<button class="btn btn-primary">Begin Your Journey</button>
+				<!-- <button class="btn btn-primary">Begin Your Journey</button> -->
 			</div>
 		</div>
 	</div>
