--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<img src="img/logo-2.png" alt="visual emotion logo">
 
 			</div>
-			<h1 class="text-center"><span>Visual</span> Emotion</h1>
+			<h1 class="text-center text-uppercase"><span>Visual</span> Emotion</h1>
 			<div class="container text-center btn-box">
 				<!-- <button class="btn btn-primary">Begin Your Journey</button> -->
 			</div>
