prototype landing page with second logo

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<div class="landling-page">
 			<div class="logo text-center">
 				<!-- <img src="img/logo-1.png" alt="visual emotion logo"> -->
-				<img src="img/logo-2.png" alt="visual emotion logo">
+				<img src="img/logo-1.png" alt="visual emotion logo">
 
 			</div>
-			<h1 class="text-center text-uppercase"><span>Visual</span> Emotion</h1>
+			<h1 class="text-center text-uppercase"><span>Web Design & </span> Deveopment </h1>
 			<div class="container text-center btn-box">
 				<!-- <button class="btn btn-primary">Begin Your Journey</button> -->
 			</div>
