Added meta tag for responsive view and description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Visual Emotion</title>
+	<meta name="Visual Emotion Homepage" content="Landing page for visual emotion">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://use.fontawesome.com/3ea3387309.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<!-- Latest compiled and minified CSS -->
